--- a/aula-css/exercicios/photo-grid/aula-1/style.css
+++ b/aula-css/exercicios/photo-grid/aula-1/style.css
@@ -54,3 +54,15 @@ margin: 0 auto;
     height: 100%;
     object-fit: cover;
 }
+
+.item_detail {
+    color: blanchedalmond;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    color: blanchedalmond;
+    font-family: monospace;
+    margin: 30px 5px 5px 30px
+}
